# openWeather-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  train_weather_model.ipynb  weather.py
