[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "chromadb>=0.6.0",
    "python-dotenv>=1.2.2",
    "xgboost>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "requests>=2.32.5",
]
